--- a/Fat_Off/.classpath
+++ b/Fat_Off/.classpath
@@ -2,6 +2,7 @@
 <classpath>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8">
 		<attributes>
+			<attribute name="module" value="true"/>
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
@@ -19,5 +20,8 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="src/Jarsfiles/commons-io-2.7.jar"/>
+	<classpathentry kind="lib" path="src/Jarsfiles/jdatepicker-1.3.4.jar"/>
+	<classpathentry kind="lib" path="activation-1.1.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
